添加新的thinking