@@ -1,5 +1,10 @@
 ## 了解java模块定义和相互应用
 
+从manifest.mf看到了包的一层,可以指定启动函数，从module.info看到了模块的一层(可见与不可见)，
+没有任何问题是加入一层无法解决的，如果还无法解决，接着加！
+从命令行的角度出发，加入一层，会使得你的options增加了几个，比如-d指定模块路径，跟随module-info.java文件等相关选项
+命令行就是流的思路(类似于Servlet控制层，夹带service函数，引入model层，service之后带入model的Dao层,实现CM控制
+流畅才能解决问题,慢慢来,会很快，在这之前，得多想; 这可以指代javac、java、jlink、jmod、目标、远景、领头人)
 <!-- markdown-toc start - Don't edit this section. Run M-x markdown-toc-refresh-toc -->
 **Table of Contents**
 
@@ -42,9 +47,9 @@ Hello world! 8
 
 3. 加入了包的概念
 
-4. 打包jar
+### 4. 打包jar
  
-+  4.1 编写manifest.mf
+####  4.1 编写manifest.mf
 
 ```
 Manifest-Version: 1.0
@@ -54,7 +59,7 @@ Created-By: 14.0.2 (Oracle Corporation)
 
 ```
 
-+  4.2  创建可执行jar包
+####  4.2  创建可执行jar包
 
    在未出现模块的概念时候使用cvfm，而在出现模块概念的时候使用 jar --create --file的方式。
    
@@ -65,7 +70,7 @@ E:\codeRoom\java\javabase\proj3>jar cvfm hello.jar manifest.mf com/sum/App.class
 
 ```
 
-+  4.3 运行jar包
+####  4.3 运行jar包
 
 ```
 E:\codeRoom\java\javabase\proj3>java -jar hello.jar
@@ -74,13 +79,13 @@ Hello world! 8
 
 ## Proj4
 
-5. 引入了模块的概念
+### 5. 引入了模块的概念
 
 在com.sum加入了一个上层文件夹ModuleNameMain
 
 并在ModuleNameMain文件夹下增加`module-info.java`文件
 
-+  5.1 编译
+####  5.1 编译
 
 ```
 E:\codeRoom\java\javabase\proj4>javac -d targets/ModuleNameMain ModuleNameMain/module-info.java ModuleNameMain/com/sum/*.java
@@ -99,7 +104,7 @@ module ModuleNameMain
 
 - `-d`表示产生的targets文件夹 包含ModuleNameMain
 
-+  5.2 运行
+####  5.2 运行
 
 ```
 E:\codeRoom\java\javabase\proj4>java --module-path targets -m ModuleNameMain/com.sum.App
@@ -109,7 +114,7 @@ Hello world! 8
 注意包的路径之间用点号， 模块和包用路径名字划分开, 注意模块也是可以使`java.base , javafx.scene` 以点号结合的形式。
 
 
-+  5.3 模块打包
+####  5.3 模块打包
 
 引入模块后可剔除掉manifest.mf, 通过`--main-class`指定运行的主类(创建jar时候使用)
 
@@ -122,7 +127,7 @@ E:\codeRoom\java\javabase\proj4>jar --create --file lib/ModuleNameMain.jar --mai
 
 注意了targets后面得加上模块名字，否则运行时候报错！
 
-+  5.4 运行打包后的模块
+####  5.4 运行打包后的模块
 
 ```
 E:\codeRoom\java\javabase\proj4>java -p lib -m ModuleNameMain
@@ -131,9 +136,9 @@ Hello world! 8
 
 注意 `-p`表示的模块jar包的输出路径
 
-+  5.5 创建一个可打包的JRE
+####  5.5 创建一个可打包的JRE
 
-+  5.5.1 创建jmod文件
+#####  5.5.1 创建jmod文件
 
 同`jar --create --file`的形式有所不一样
 
@@ -142,7 +147,7 @@ E:\codeRoom\java\javabase\proj4>jmod create --class-path lib/ModuleNameMain.jar 
 
 ```
 
-+  5.5.2 创建JRE文件夹
+#####  5.5.2 创建JRE文件夹
 
 下面`--add-modules`是jmod文件！(只不过省略掉jmod后缀， `--module-path`类似`-C`)
 `jlink --module-path jmodfile`(上个命令生成的jmod文件存放的文件夹) `--add-modules ModuleNameButton,ModuleNameMain,java.base --output myapp`
@@ -162,20 +167,20 @@ Hello world! 8
 
 ## proj5
 
-6. 多模块相互引用
+### 6. 多模块相互引用
 
-+  6.1 `ModuleNameAdd module-info.java`加入`exports`
+####  6.1 `ModuleNameAdd module-info.java`加入`exports`
 
-+  6.2 `ModuleNameMain module-info.java`加入`requires`
+####  6.2 `ModuleNameMain module-info.java`加入`requires`
 
-+  6.3 编译ModuleNameAdd模块 
+####  6.3 编译ModuleNameAdd模块 
 
 ```
     E:\codeRoom\java\javabase\proj5>javac -d targets/ModuleNameAdd ModuleNameAdd/module-info.java ModuleNameAdd/com/qny/*.java
     
 ```
 
-+  6.4 编译moduleNameMain模块
+####  6.4 编译moduleNameMain模块
 
 ```
     E:\codeRoom\java\javabase\proj5>javac --module-path targets -d targets/ModuleNameMain ModuleNameMain/module-info.java ModuleNameMain/com/sum/*.java
@@ -184,7 +189,7 @@ Hello world! 8
 注意增加`--module-path` 必须指定，虽然在`ModuleNameMain`中的`module-info.java requires ModuleNameAdd`;但是_javac_依然不知道module在哪里
 所以必须指定！
 
-+  6.5 运行多模块的主程序
+####  6.5 运行多模块的主程序
 
 <2020-10-27 17:32> 有效！多模块编程的时候只需要运行主程序jar即可。
 
@@ -193,9 +198,9 @@ E:\codeRoom\java\javabase\proj5>java --module-path targets -m ModuleNameMain/com
 Hello world! 8
 ```
 
-+  6.6 制作jmod文件(可以直接运行module)
+####  6.6 制作jmod文件(可以直接运行module)
 
-+  6.6.1 制作jar
+##### 6.6.1 制作jar
 
 注意jar和jmod都只是打包压缩的作用，真正编译阶段之时在javac阶段(java compile)
 
@@ -225,7 +230,7 @@ E:\codeRoom\java\javabase\proj5\MyApp\bin>java -m ModuleNameMain
 如果想要能够直接使用ModuleNameMain,那么必须在`jar --create-file`阶段使用`--main-class`开关项    
 
 
-+  6.6.2 制作jmod
+#####  6.6.2 制作jmod
 
 切换到6.6.1 jar生成的路径中!
 
@@ -238,7 +243,7 @@ E:\codeRoom\java\javabase\proj5\targets\jars>jmod create  --class-path ModuleNam
 ```
 
 
-+  6.6.3 制作可运行的JRE
+#####  6.6.3 制作可运行的JRE
 
 
 - 创建JRE文件夹
@@ -260,5 +265,41 @@ E:\codeRoom\java\javabase\proj4\myAppOne\bin>java -m ModuleNameMain
 Hello world! 8
 ```
 
+## 附录
+
+javac编译，java运行(编译运行)
+javac编译，生产module(包含module-info.jar)或者非module的jar包(可能包含)，进一步导出jmod，jlink所有jmod行成一个jre，java运行(编译运行)
+
+
+- javac.exe(根据java后缀文件生成class文件 或者模块的class路径,即module文件夹)
+  - `--module-path`  编译后模块所在文件夹
+  - `-d` 指定模块编译后存放位置
+  - `javac  -d targets/ModuleNameAdd ModuleNameAdd/module-info.java ModuleNameAdd/com/qny/*.java`
+  - `javac --module-path target -d targets/ModuleNameMain ModuleNameMain/module-info.java ModuleNameMain/com/qny/*.java`
+- jar.exe (根据class文件或者module的class文件打包成jar包  可以指定启动函数, 中间产物或者最终文件)
+  - `--create` 创建jar包
+  - `--file` 指定jar包输出文件名
+  - `--main-class` 指定主类，启动类,也可以通过manifest.tf文件指定
+  - `-C` 指定编译后class路径(或者module的class路径,即module文件夹) jar只是class的压缩文件
+  - `tf` 显示jar信息  `jar tf ModuleNameAdd.jar`
+  - `jar --create --file targets/jars/ModuleNameAdd.jar -C targets/ModuleNameAdd .`
+  - `jar --create --file targets/jars/ModuleNameMain.jar -C targets/ModuleNameAMain .`
+  - `jar cvfm hello.jar manifest.mf com/sum/App.class` 另外一种打包方式
+- jmod.exe  (根据jar包生成jmod包)
+  - `create` 没有双破折号
+  - `--class-path` 根据jar包具体路径，用于生成jmod文件
+  - `jmod create --class-path targets/jars/ModuleNameAdd.jar ModuleNameAdd.jmod `
+  - `jmod create --class-path targets/jars/ModuleNameMain.jar ModuleNameMain.jmod `
+- jlink.exe (根据jmod生成jre文件夹)
+  - `--module-path .` 指定可以找到jmod文件的文件夹(路径)
+  - `--add-modules` 指定Jmod的模块名字(java.base)
+  - `--output` 输出文件名
+  - `jlink --module-path . --add-moduels ModuleNameMain,java.base --output MyAppJRE`
+- java.exe (运行jar或module文件)
+  - `-jar` 指定需要运行jar包
+  - `--module-path`  模块所在文件夹
+  - `-p` 指定jar包所在文件夹相对路径,jar包只是压缩文件，所以可能是module也可能不是
+  - `-m`  指定需要运行模块
+  - `java --module-path targets -m ModuleNameMain/com.sum.App`  运行多模块的一种方式
 
 [1]: https://github.com/jueqingsizhe66/whyJavaModule/blob/develop/image/ThinkFromModuleUp.jpg
